# decision-engine

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MASTER_FIRST_PRINCIPLES_REFERENCE.md  README.md  cli.py  cloudbuild-codification-sweep.yaml  cloudbuild.yaml  docker-compose.yml  gigaton_client.py  pyproject.toml  requirements.txt
api/: main.py  routes.py  schemas.py
config/: engine.yaml
drift_sentinel/: BETA_2_GAP_LIST.md  DRIFT_RULES.yaml  DRIFT_SCANNER_SPEC.md  GIGATON_CANONICAL_FIRST_PRINCIPLES.md  README.md  drift_scan.py
engine/: __init__.py  decision_engine.py  gates.py  hme_event_emitter.py  learning_agent.py  memory_manager.py  pipeline.py  ppeme_outcome_emitter.py  pricing_bridge.py  seed_certificates.py  trust_certificates.py
frontend/: index.html  input-engine.html
intelligence_silo/: __init__.py
ppeme/: __init__.py  master_calculator.py
scripts/: __init__.py  backfill_carmen_beach_revenue.py  bootstrap_outcome_sources.py
specs/: ai_routing_engine_v0.md  codification_engine_v0.md  human_override_engine_v0.md  ovs_calibration_engine_v0.md  v3-fixed-assumptions.md
tests/: test_ai_router.py  test_backfill_carmen_beach.py  test_bootstrap_sources.py  test_codification.py  test_drift_bft_rules.py  test_drift_deploy_cascade_rules.py  test_drift_maj012.py  test_drift_preventive_rules.py  test_drift_scanner_exclusions.py  test_gate_5_pricing.py  test_gate_8_drift.py  test_gigaton_client.py  test_hme_event_emitter.py  test_human_override.py  test_initiative_webhook.py  test_modular_replication_via_input_substitution.py  test_ovs_calibration.py  test_penrose_bft_emitter.py  test_penrose_scoreboard.py  (+7 more)
(+125 files in other folders)
