[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-engine"
version = "2.0.0"
description = "Executive Decision Engine — 9-stage pipeline with RTQL, 7-gate authorization, certificate chain, and adaptive learning loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Todd Nelson", email = "todd.cx@turtleisland.solutions" }]
keywords = [
    "decision-engine", "trust-matrix", "rtql", "certificate-chain",
    "gigaton", "cxguy", "intelligence", "autonomous-execution"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]
api = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://gigaton.app"
Source = "https://github.com/todd-gig/decision-engine"
Documentation = "https://github.com/todd-gig/decision-engine/tree/main/docs"

[project.scripts]
decision-engine = "cli:main"

[tool.setuptools.packages.find]
# Engine package is at ./engine/
include = ["engine*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.package-data]
"engine" = ["py.typed"]
